# skys-jouzu-bulkops

./: __main__.py  __version__.py  makefile  pyproject.toml  readme.md
.github/workflows/: pipeline.yml
resources/: CHANGELOG.md  config.json  config.md  manifest.json
src/: __init__.py  __version__.py  addon_config.py  colour_pitch.py  externally.py  pitch.py  settings.py  unpack.py  unpack_reading.py  utils.py
src/aqthooks/: __init__.py  aqt_csv_io.py  aqt_gui_config.py  aqt_menu.py  aqt_pitch.py  aqt_unpack.py  qt_utils.py
src/aqthooks/actions/: actions_csv.py  actions_pitch.py  actions_unpack.py
src/aqthooks/configuration/: config_dialog.py  config_dialog_module.py  dialog_module_about.py  dialog_module_changelog.py  dialog_module_developer.py  dialog_module_general.py  dialog_module_pitch.py  dialog_module_unpack.py
test/: __init__.py  test_colour_pitch.py  test_unpack.py
test/data/: unpack_x.csv  unpack_y.csv
